--- a/public/tuiter/bookmarks/index.css
+++ b/public/tuiter/bookmarks/index.css
@@ -142,6 +142,7 @@ body{
     display: inline-block;   
     padding-left: 16px;
     padding-right: 16px;
+    align-items: flex-start;
 }
 
 .wd-actions li a{
@@ -151,9 +152,11 @@ body{
     padding-left: 16px;
     padding-right: 16px;
 } 
+
 .wd-actions a{
     text-decoration: none;
     display: inline-flex;
+    align-items: flex-start;
     
 }
 
@@ -174,7 +177,7 @@ body{
     padding-right: 12px;
 }
 
-.wd-selectedaction a{
+.wd-selectedaction > .wd-actionurl{
     color:red;
 }
 
