--- a/public/tuiter/bookmarks/index.css
+++ b/public/tuiter/bookmarks/index.css
@@ -145,35 +145,41 @@ body{
     align-items: flex-start;
 }
 
-.wd-actions li a{
+.wd-actions {
+    /* display: inline-block; */
     list-style-type: none;
-    color: rgb(110,118,125);
-    display: inline-block;   
-    padding-left: 16px;
-    padding-right: 16px;
-} 
-
-.wd-actions a{
-    text-decoration: none;
-    display: inline-flex;
-    align-items: flex-start;
-    
-}
-
-.wd-actions{
-    display: inline-block;
+    display: relative;
     padding-left:0px;
     align-items: center;
 }
 
-.wd-actionurl{
-    display: inline-block;
+.wd-actions li {
+    
+    color: rgb(110,118,125);
+    display: inline-block;   
+    padding-left: 16px;
+    padding-right: 16px;
+    /* padding-top:52px; */
+} 
+
+.wd-actions a {
+    text-decoration: none;
+    color: gray;
+    display: inline-flex;
+    /* align-items: flex-start; */
+    /* padding-top:70px; */
 }
+
+
+
+/* .wd-actionurl{
+    display: inline-block;
+} */
 
 .wd-action-icon{
     height: 25px;
     width:25px;
-    padding-top: 12px;
+    padding-top: 0px;
     padding-right: 12px;
 }
 
