--- a/public/labs/a4/challenge/index.css
+++ b/public/labs/a4/challenge/index.css
@@ -180,3 +180,7 @@ i.fa-house{
     border-color: black; 
 }
 
+.override-corners{
+    border-bottom-left-radius:45%;
+    border-bottom-right-radius: 45%;
+}
