--- a/src/tuiter/profile/index.css
+++ b/src/tuiter/profile/index.css
@@ -1,3 +1,18 @@
+.wd-banner-image {
+    width: 100%;
+    height: 250px;
+}
+button.wd-button-color {
+    background-color: white;
+}
+
+
+.wd-banner-picture {
+    position: relative;
+    top: 0;
+    left: 0;
+    border: 1px solid #000000;
+}
 .wd-profile-picture {
     position: absolute;
     height: 150px;
@@ -6,16 +21,3 @@
     left: 23px;
     border: 1px solid #000000;
 }
-
-.wd-banner-image {
-    width: 100%;
-    height: 250px;
-}
-
-.wd-banner-picture {
-    position: relative;
-    top: 0;
-    left: 0;
-    border: 1px solid #000000;
-}
-
