--- a/src/tuiter/profile/index.css
+++ b/src/tuiter/profile/index.css
@@ -2,10 +2,6 @@
     width: 100%;
     height: 250px;
 }
-button.wd-button-color {
-    background-color: white;
-}
-
 
 .wd-banner-picture {
     position: relative;
@@ -15,9 +11,10 @@ button.wd-button-color {
 }
 .wd-profile-picture {
     position: absolute;
-    height: 150px;
-    width: 150px;
-    top: 180px;
+    height: 130px;
+    width: 130px;
+    top: 200px;
     left: 23px;
+    margin-bottom: 4px;
     border: 1px solid #000000;
 }
