--- a/src/tuiter/profile/index.css
+++ b/src/tuiter/profile/index.css
@@ -1,9 +1,9 @@
-.wd-banner-image {
+.wd-timeline-image {
     width: 100%;
     height: 250px;
 }
 
-.wd-banner-picture {
+.wd-timeline-picture {
     position: relative;
     top: 0;
     left: 0;
@@ -13,8 +13,7 @@
     position: absolute;
     height: 130px;
     width: 130px;
-    top: 200px;
+    top: 230px;
     left: 23px;
-    margin-bottom: 4px;
     border: 1px solid #000000;
 }
